# ComputerGraphics

./: README.md  pyproject.toml
0. P5 Analog Clock/: sketch.js
1. P5 Analog Clock/: sketch.js
1. P5 Bézier/: bezier_4point.html  bezier_4point.js
2. P5 Fractal/: fractal.html  fractal.js  mercury.html  mercury.js  moon.html  moon.js  solarSystem.html  solarSystem.js
3. OpenGL Square Pyramid/: cubos.py  piramide.py
4. OpenGL Textured Die/: cubo.py  dado.py  quadrado.py
5. OpenGL Textured Shaded Sphere/: esferaluztextura.py
6. OpenGL PLY Model/: BlenderMonkey.py  BlenderMonkeyApp.py
examples_opengl/: cubo.py  esfera.py  esferaluz.py  geometria_esfera.py  malha.py  thorusluz.py
examples_opengl/newglpy/: StanfordBunny.py  StanfordBunnyApp.py
examples_opengl/newglpy/pipeline/IntensityForBunny/: IntensityForBunny.frag
examples_p5/editor/: index.html
